# sesam2

./: Vagrantfile
sesam2-backend/: .gitignore  Readme.md  frontend.js  frontend.py  pyproject.toml  test_from_the_front.py
sesam2-backend/src/: auth.py  config.py  main.py  models.py  utils.py
sesam2-backend/src/db/: __init__.py  models.py  query.py
sesam2-backend/src/physical/: door.py
sesam2-frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
sesam2-frontend/src/: App.svelte  AreWeOnline.svelte  Footer.svelte  Header.svelte  Main.svelte  config.ts  login.ts  requests.ts
sesam2-frontend/src/lib/: Admin.svelte  DoorButtons.svelte  LoginForm.svelte  doorAccess.ts  types.ts  utils.ts
sesam2-frontend/src/store/: store.ts
